# WavesMFEM

./: .gitignore  CMakeLists.txt  SimulationParameters.json  data.txt  deformed_star.mesh  my_mesh2.mesh  my_wave_solver.cpp  run_until_failure.sh  u_data.txt
drivers/: MeshDeformationThroughDirectManipulationOfNodes.cpp  MeshDeformationThroughGridFunction.cpp  WaveDynamics2D.cpp  WaveDynamics2D_prl.cpp  mesh1d_info_driver.cpp  mesh_info_PrintCoordinates_and_GridFunction.cpp  mesh_info_driver.cpp  mesh_info_driver_Jun1_25.cpp  mesh_info_nodes_and_dof.cpp  my_wave_solver.cpp
include/: quess.hpp  save.hpp
input/inputParameters/: WaveDynamics2D.json  test11_SimulationParameters.json
input/meshes/: Rectangle-quad.mesh  my_mesh2.mesh
results/: WaveColorSettings.pvsm
results/WaveDynamics2D/: SimulationDetails.txt
results/WaveDynamics2D/Waves2D/: Waves2D.pvd
results/Waves2D_1/: SimulationDetails.txt
results/Waves2D_1/Waves2D/: Waves2D.pvd  u2_new.mov  u2_new_2.mov
results/Waves2D_2/: SimulationDetails.txt
results/Waves2D_2/Waves2D/: Waves2D.pvd
results/deformed_output/: deformed_output.pvd
results/test10/: SimulationDetails.txt
results/test10/configFiles/: configFiles.pvd
results/test11/: SimulationDetails.txt
results/test11/configFiles/: configFiles.pvd
results/test2/configFiles/Cycle000020/: proc000000.vtu
results/test2/configFiles/Cycle000030/: proc000000.vtu
results/test2/configFiles/Cycle000050/: proc000000.vtu
results/test2/configFiles/Cycle000080/: proc000000.vtu
results/test2/configFiles/Cycle000110/: proc000000.vtu
results/test2/configFiles/Cycle000140/: proc000000.vtu
results/test2/configFiles/Cycle000160/: proc000000.vtu
results/test2/configFiles/Cycle000170/: proc000000.vtu
results/test2/configFiles/Cycle000180/: proc000000.vtu
results/test2/configFiles/Cycle000190/: proc000000.vtu
results/test2/configFiles/Cycle000210/: proc000000.vtu
results/test2/configFiles/Cycle000230/: proc000000.vtu
results/test2/configFiles/Cycle000240/: proc000000.vtu
results/test2/configFiles/Cycle000260/: proc000000.vtu
results/test2/configFiles/Cycle000290/: proc000000.vtu
results/test3/: SimulationDetails.txt
results/test3/configFiles/: configFiles.pvd
results/test8/: SimulationDetails.txt
results/test8/configFiles/: configFiles.pvd
results/test9/: SimulationDetails.txt
results/test9/configFiles/: configFiles.pvd
scripts/: MFEM_mesh_generation.nb  SimulationParameters.json  clear_results.sh  plot_commands.gp  plot_point_displacement.wls  run_plot.sh
src/: initialize.cpp  quess.cpp  save.cpp
temp/: square.mesh
temp/square/: square.pvd
tutorialsGuidesNotesResourcesDocumentation/: MFEM_tutorial.key  MixedFormulation.tex  theory.md
(+486 files in other folders)
